<?xml version="1.0"?>
<package>
  <name>cnr_hardware_interface</name>
  <version>0.0.0</version>
  <description>The cnr_hardware_interface package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="iras@itia.cnr.it">Jane Doe</maintainer> -->
  <maintainer email="iras@itia.cnr.it">maxwell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cnr_controller_interface</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>configuration_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>configuration_msgs</build_depend>
  <build_depend>realtime_utilities</build_depend>
  <build_depend>cnr_logger</build_depend>
  <build_depend>cnr_controller_manager_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>cnr_logger</run_depend>
  <run_depend>cnr_controller_manager_interface</run_depend>
  <run_depend>cnr_controller_interface</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>configuration_msgs</run_depend>
  <run_depend>realtime_utilities</run_depend>
  <run_depend>pluginlib</run_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/plugin.xml" />
    <cnr_hardware_interface plugin="${prefix}/plugin.xml" />
  </export>
</package>
