<?xml version="1.0"?>
<package>
  <name>cnr_hardware_interface</name>
  <version>0.0.0</version>
  <description>The cnr_hardware_interface package</description>

  <maintainer email="nicola.pedrocchi@stiima.cnr.it">Nicola Pedrocchi</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cnr_logger</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>diagnostic_updater</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>configuration_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>configuration_msgs</build_depend>
  <build_depend>realtime_utilities</build_depend>
  <build_depend>cnr_logger</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roslint</build_depend>

  <run_depend>cnr_logger</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>diagnostic_updater</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>configuration_msgs</run_depend>
  <run_depend>realtime_utilities</run_depend>
  <run_depend>pluginlib</run_depend>

  <build_depend>code_coverage</build_depend>
  <build_depend>rostest</build_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
