<?xml version="1.0"?>
<package format="2">
  <name>cnr_hardware_nodelet_interface</name>
  <version>0.0.0</version>
  <description>The cnr_hardware_nodelet_interface package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wsl@todo.todo">wsl</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/cnr_hardware_nodelet_interface</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cnr_controller_interface</build_depend>
  <build_depend>cnr_controller_manager_interface</build_depend>
  <build_depend>cnr_logger</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>realtime_utilities</build_depend>
  <build_depend>cnr_hardware_interface</build_depend>
  <build_depend>configuration_msgs</build_depend>

  <build_export_depend>cnr_controller_interface</build_export_depend>
  <build_export_depend>cnr_controller_manager_interface</build_export_depend>
  <build_export_depend>cnr_logger</build_export_depend>
  <build_export_depend>nodelet</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>realtime_utilities</build_export_depend>
  <build_export_depend>cnr_hardware_interface</build_export_depend>
  <build_export_depend>configuration_msgs</build_export_depend>


  <exec_depend>cnr_controller_interface</exec_depend>
  <exec_depend>cnr_controller_manager_interface</exec_depend>
  <exec_depend>cnr_logger</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>realtime_utilities</exec_depend>
  <exec_depend>cnr_hardware_interface</exec_depend>
  <exec_depend>configuration_msgs</exec_depend>


  <build_depend>code_coverage</build_depend>
  <build_depend>rostest</build_depend>

  <export>
    <nodelet plugin="${prefix}/plugin.xml" />
  </export>

</package>
